stabilize workflows, fix user issues

--- a/roles/monitoring/templates/.env.j2
+++ b/roles/monitoring/templates/.env.j2
@@ -1,7 +1,7 @@
-PROMETHEUS_VERSION={{ monitoring_prometheus_version }}
-GRAFANA_VERSION={{ monitoring_grafana_version }}
-NODE_EXPORTER_VERSION={{ monitoring_node_exporter_version }}
-CADVISOR_VERSION={{ monitoring_cadvisor_version }}
+PROMETHEUS_VERSION={{ lookup('env', 'PROMETHEUS_VERSION', default='latest') }}
+GRAFANA_VERSION={{ lookup('env', 'GRAFANA_VERSION', default='latest') }}
+NODE_EXPORTER_VERSION={{ lookup('env', 'NODE_EXPORTER_VERSION', default='latest') }}
+CADVISOR_VERSION={{ lookup('env', 'CADVISOR_VERSION', default='latest') }}
 
-GRAFANA_ADMIN_USER={{ lookup('env', 'GRAFANA_ADMIN_USER') }}
-GRAFANA_ADMIN_PASSWORD={{ lookup('env', 'GRAFANA_ADMIN_PASSWORD') }}
+GRAFANA_ADMIN_USER={{ lookup('env', 'GRAFANA_ADMIN_USER', default='gf-admin') }}
+GRAFANA_ADMIN_PASSWORD={{ lookup('env', 'GRAFANA_ADMIN_PASSWORD', default=lookup('password', '/dev/null length=16 chars=ascii_letters,digits')) }}
